Small fixes recommended by Sonarqube